log/build_2025-09-28_00-12-43/sensor_combined/stdout_stderr.log
running egg_info
writing ../../build/sensor_combined/sensor_combined.egg-info/PKG-INFO
writing dependency_links to ../../build/sensor_combined/sensor_combined.egg-info/dependency_links.txt
writing entry points to ../../build/sensor_combined/sensor_combined.egg-info/entry_points.txt
writing requirements to ../../build/sensor_combined/sensor_combined.egg-info/requires.txt
writing top-level names to ../../build/sensor_combined/sensor_combined.egg-info/top_level.txt
reading manifest file '../../build/sensor_combined/sensor_combined.egg-info/SOURCES.txt'
writing manifest file '../../build/sensor_combined/sensor_combined.egg-info/SOURCES.txt'
running build
running build_py
copying sensor_combined/log_messages.py -> /home/advitha/ros2_ws/build/sensor_combined/build/lib/sensor_combined
running install
running install_lib
copying /home/advitha/ros2_ws/build/sensor_combined/build/lib/sensor_combined/log_messages.py -> /home/advitha/ros2_ws/install/sensor_combined/lib/python3.10/site-packages/sensor_combined
byte-compiling /home/advitha/ros2_ws/install/sensor_combined/lib/python3.10/site-packages/sensor_combined/log_messages.py to log_messages.cpython-310.pyc
running install_data
  File "/home/advitha/ros2_ws/install/sensor_combined/lib/python3.10/site-packages/sensor_combined/log_messages.py", line 11
    Attachments16:08 (8 hours ago)
                  ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers

running install_egg_info
removing '/home/advitha/ros2_ws/install/sensor_combined/lib/python3.10/site-packages/sensor_combined-0.0.1-py3.10.egg-info' (and everything under it)
Copying ../../build/sensor_combined/sensor_combined.egg-info to /home/advitha/ros2_ws/install/sensor_combined/lib/python3.10/site-packages/sensor_combined-0.0.1-py3.10.egg-info
running install_scripts
Installing figure_eight_node script to /home/advitha/ros2_ws/install/sensor_combined/lib/sensor_combined
Installing log_messages script to /home/advitha/ros2_ws/install/sensor_combined/lib/sensor_combined
writing list of installed files to '/home/advitha/ros2_ws/build/sensor_combined/install.log'
